# Sudar

./: .env.example  .env.template  .gitignore  ADL.docx  README.md  docker-compose.yml  envconfig.py  nginx.conf  ollama_entrypoint.sh  pyproject.toml
agent/: .env.template  .gitignore  DeepAgents.md  __init__.py  agent.py  getChatHistory.py  requirements.txt  setup_test.py  sudar.py  terminalChat.py
agent/agent-design/: SudarAIAgentArchitecture.excalidraw
agent/output/: content.md
agent/prompts/: __init__.py  prompt.py
agent/services/: __init__.py  agent_memory_service.py  chatService.py
agent/subagents/: ReActSubAgent.py  SubAgents.py  __init__.py
agent/test/: Chunktest.py  Miniotest.py  RAGtest.py  SaveContentTest.py
agent/tools/: __init__.py
agent/tools/ContentSaver/: __init__.py  contentSaverTool.py
agent/tools/RAG/: Chunking.py  RAG.py  Retrieve.py  __init__.py
agent/tools/RAG/test/: _RAG_Test.py
agent/tools/WebSearch/: __init__.py  websearchtool.py
agent/tools/WebsiteScraper/: __init__.py  website_scraper.py
agent/utils/: __init__.py  chat_util.py  reset_qdrant.py  util.py
be/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run.py  worker.py
be/api/: __init__.py  activity.py  auth.py  authUtils.py  classroom.py  context.py  database.py  forgot_password.py  logout.py  main.py  minio.py  models.py  performance.py  requirements.txt  schemas.py  schemas_classroom.py  students.py  subjects.py
be/sql/: 01-tableSchema.sql
data-design/: DBSchemaDesignDoc.md
design/sudar-ai-architecture/: SudarAIArchitecture.excalidraw
fe/: CSS_VARIABLES.md  index.html  package-lock.json  package.json
fe/src/: App.tsx  api.ts  index.css  main.tsx
fe/src/components/: Button.tsx  ProtectedRoute.tsx
fe/src/components/header/: Header.css  Header.tsx
fe/src/components/sidebar/: Sidebar.css  Sidebar.tsx
fe/src/components/subject/: ContentCreation.css  ContentCreation.tsx  SubjectDetail.css  SubjectDetail.tsx  WorksheetGeneration.css  WorksheetGeneration.tsx
fe/src/contexts/: AuthContext.tsx  ThemeContext.tsx
fe/src/layouts/: MainLayout.css  MainLayout.tsx
fe/src/pages/classSubjects/: ClassSubjects.css  ClassSubjects.tsx
fe/src/pages/classes/: Classes.css  Classes.tsx
fe/src/pages/classroom/: Classroom.css  Classroom.tsx
fe/src/pages/doubtClearance/: DoubtClearance.css  DoubtClearance.tsx
fe/src/pages/home/: home.css  home.tsx
fe/src/pages/login/: ForgotPassword.css  ForgotPassword.tsx  SignUp.css  SignUp.tsx  login-clean.css  login.css  login.tsx
fe/src/pages/students/: ManageStudents.css  ManageStudents.tsx
fe/src/pages/subject/: SubjectPage.css  SubjectPage.tsx
fe/src/utils/: apiInterceptor.ts
frontend/: .env.sample  README.md  STREAMING_INTEGRATION.md  components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  colors.ts  index.css
frontend/src/app/: layout.tsx
frontend/src/components/: ActivityCard.tsx  AppSidebar.tsx  ChatInput.tsx  CreateActivityDialog.tsx  CreateEditDialogue.tsx  FeedbackDialog.tsx  FilesAndChat.tsx  MainCards.tsx  ProtectedRoute.tsx  StreamRenderer.tsx  StudentFeedbackCard.tsx  ThemeToggle.tsx  VerificationDialog.tsx  WorksheetPhaseRenderers.tsx
frontend/src/components/ai-elements/: response.tsx
frontend/src/components/chat/: StepTimeline.tsx  StreamingMessageRenderer.tsx  ToolCallCard.tsx
frontend/src/components/ui/: animated-border-text.tsx  animated-theme-toggler.tsx  aurora-text.tsx  card.tsx  hover-card.tsx  sidebar.tsx
frontend/src/contexts/: AuthContext.tsx  ClassroomContext.tsx  ThemeProvider.tsx
frontend/src/hooks/: useLoadChatHistory.ts  useStreamingChat.ts
frontend/src/lib/: renderPoller.ts
frontend/src/pages/: Activity.tsx  Auth.tsx  Chat.tsx  Classroom.tsx  ForgotPassword.tsx  Home.tsx  Landing.tsx  SimplifiedChatExample.tsx  Subject.tsx
services/agent/: .dockerignore  .env.sample  CHAT_ROUTES.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
services/agent/src/: llm_models.ts  mcpClient.ts  prompts.ts  server.ts
services/agent/src/agent/: codeEvaluator.ts  contentResearcher.ts  worksheetGenerator.ts
services/agent/src/config/: db.ts
services/agent/src/controller/: chatController.ts
services/agent/src/flows/: contentCreationFlow.ts  doubtClearanceFlow.ts  worksheetFlow.ts
services/agent/src/middlewares/: authMiddleWare.ts
services/agent/src/models/: chatSchema.ts
services/agent/src/routes/: chatRoutes.ts
services/manim-renderer/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  pyproject.toml  requirements.txt
services/manim-renderer/src/: app.py
services/manim-renderer/test/: test_service.py  test_validate.py
services/md-to-pdf/: .dockerignore  Dockerfile  dockerfile  package-lock.json  package.json
services/md-to-pdf/src/: server.ts
services/rag-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  init_docling_models.py  main.py  pyproject.toml  startup.py  worker.py
services/rag-service/src/: Chunker.py  DocumentParser.py  Embedder.py  MinIOStorage.py  Retriever.py  __init__.py  auth_dependency.py  database.py  models.py
services/sudar-tools-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
services/sudar-tools-mcp-server/src/: __init__.py  server.py  test_content_saver.py  test_tools.py  tools.py
services/sudar_agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/sudar_agent/src/sudar_agent/: api.py  auth_dependency.py  database.py  main.py  models.py  orchestrator.py
services/sudar_agent/src/sudar_agent/config/: config.py
services/sudar_agent/src/sudar_agent/flows/: __init__.py  doubt_flow.py  worksheet_flow.py
services/sudar_agent/src/sudar_agent/prompts/: __init__.py  prompts.py
services/sudar_agent/src/sudar_agent/router/: __init__.py  router_crew.py
services/sudar_agent/src/sudar_agent/services/: __init__.py  chat_service.py  memory_service.py
services/sudar_agent/src/sudar_agent/tools/: __init__.py  mcp_tools.py
(+11 files in other folders)
