[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manim-renderer"
version = "0.1.0"
description = "Manim renderer service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "aiohttp==3.8.6",
    "redis==5.0.7",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []