[project]
name = "sudar_agent"
version = "0.1.0"
description = "sudar-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymongo>=4.8.0",
    "qdrant-client>=1.11.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
sudar_agent = "sudar_agent.main:run"
run_crew = "sudar_agent.main:run"
train = "sudar_agent.main:train"
replay = "sudar_agent.main:replay"
test = "sudar_agent.main:test"
serve = "sudar_agent.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
